refactor: 3 Manager Facade 收敛 API，落库上移，零 JavaFX 依赖
wwt-kuro-api 模块解耦改造：
- 新建 3 个 Facade Manager 收敛原 30+ Task 逻辑：
  - KujiequManager: 21 个同步方法（库街区签到/角色/深塔/矩阵/海墟/计算器/资源简报/登录/短信）
  - LauncherManager: queryPlayerInfo / queryRole（启动器 SDK）
  - GameManager: getLauncherResource / getGameResourceList / downloadFile / downloadServerFiles
- 新建 KujiequApiContext 替代 BaseTask：承载 HttpClient/ObjectMapper/B-At token 缓存/请求头构建/token 过期回调
- 新建 TokenExpiredCallback 接口，app 侧注入实现转发到 NotificationManager
- 3 个纯 DTO 下移到 com.kuro.model（ResponseBody/ResponseBodyForApi/SourceType）
- ApiUtil 内联 API_DECRYPT_KEY 常量，切断对 app AppConstants 的依赖
- 删除全部 Task 文件 + BaseTask + UUIDHelper + 4 个废弃类
- wwt-kuro-api 零 JavaFX 依赖，纯同步 API

app 侧改造：
- DataSourceModule 新增 4 个 @Provides（KujiequApiContext/KujiequManager/LauncherManager/GameManager）
- 19+ ViewModel/Service 调用点改造：Task 异步模式 → Manager 同步调用 + 虚拟线程 + Platform.runLater
- 落库逻辑上移到 Service 层：TowerDataService/SlashDataService 补 saveToDB，GameNewTowerService 已有
- SignTask 移回 app 模块（cn.tealc.wutheringwavestool.thread）
- PlayerInfo 补 @JsonProperty 修复反序列化 bug
- 删除 7 个引用已删除 Task 的 legacy 测试脚本

验证：mvn package BUILD SUCCESS（wwt-kuro-api 97 文件 + wwt-app 228 文件）